# give-credit

./: Cargo.toml  README.md  generate-id.sh
donation/: Cargo.toml  give_credit_nft.wasm
donation/.soroban/: contract-id
donation/src/: contract.rs  lib.rs  test.rs
erc721/src/: lib.rs  types.rs
nft-contract/: Cargo.toml  Makefile  deploy.sh  give_credit_nft.wasm
nft-contract/.soroban/: contract-id
nft-contract/nft/: Cargo.toml
nft-contract/nft/src/: lib.rs  test.rs
storage/src/: lib.rs
token/: Cargo.toml  deploy.sh  generate-id.sh  initialize.sh
token/.soroban/: contract-id  identity
token/src/: contract.rs  lib.rs  nftmint.rs  test.rs
