[package]
name = "give_credit_nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
erc721 = { workspace = true, default-features = false, features = ["metadata"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }